[metadata]
name = pytelpoint
author = T. E. Pickering
author_email = te.pickering@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/mmtobservatory/pytelpoint
description = Python utilities for analyzing telescope pointing and tracking via probabilistic methods
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mmtobservatory/pytelpoint

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    scipy
    astropy
    matplotlib
    arviz
    corner
    pymc
    pandas

[options.extras_require]
test =
    tox
    pytest-astropy
docs =
    sphinx-astropy
dev =
    ipympl

[options.package_data]
pytelpoint = test_data/*

[tool:pytest]
testpaths = "pytelpoint" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pytelpoint/_astropy_init*
    pytelpoint/conftest.py
    pytelpoint/*setup_package*
    pytelpoint/tests/*
    pytelpoint/*/tests/*
    pytelpoint/extern/*
    pytelpoint/version*
    */pytelpoint/_astropy_init*
    */pytelpoint/conftest.py
    */pytelpoint/*setup_package*
    */pytelpoint/tests/*
    */pytelpoint/*/tests/*
    */pytelpoint/extern/*
    */pytelpoint/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
